<resources>
    <string name="app_name" translatable="false">MachniaCloud</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>

    <!--LOGIN SCREEN-->
    <string name="title_activity_main">Login Screen</string>
    <string name="login">Username</string>
    <string name="password">Password</string>
    <string name="server">Server address</string>
    <string name="remember">Remember me </string>
    <string name="sign_in">Sign in</string>
    <string name="incorrect_credentials">Incorrect login/password for this server</string>

    <!--FILE MANAGER-->
    <string name="title_activity_file_manager">Files</string>
    <string name="plus" translatable="false">+</string>
    <string name="settings_icon" translatable="false">⚙</string>
    <string name="folder" translatable="false">📁</string>
    <string name="size">Size:</string>
    <string name="upload_error">Error while uploading file</string>
    <string name="folder_name">New folder name</string>
    <string name="hint">Valid folder name</string>
    <string name="folder_error">Folder name should match the expression [a–zA–Z0–9]+</string>
    <string name="removal">Are you sure you want to remove $name?</string>
    <string name="delete">Delete</string>


    <!--  SETTINGS  -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_language_choose">Choose language</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_contrast">Contrast</string>

    <!--CONSTANTS -->
    <string-array name="languages">
        <item>English</item>
        <item>Deutsch</item>
        <item>Polski</item>
        <item>日本語</item>
    </string-array>

    <string-array name="themes">
        <item>Dark Theme</item>
        <item>Light Theme</item>
        <item>High contrast</item>
    </string-array>
</resources>
