<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FileManagerActivity" android:orientation="vertical" android:background="@android:color/black"
        android:gravity="center_horizontal" android:id="@+id/bg_settings">

    <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/logo_settings" android:textColor="@android:color/white"
            android:gravity="center" android:layout_marginBottom="30dp" android:textSize="40sp"
            app:fontFamily="cursive" android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/settings_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textview1" android:textColor="@android:color/white"
            android:gravity="center" android:textSize="20sp" app:fontFamily="serif"/>
    <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content" android:id="@+id/languageSpinner" android:layout_marginBottom="20dp"
            android:background="@drawable/spinner_border" android:layout_marginTop="5dp"/>
    <TextView
            android:text="@string/settings_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textview2" android:textColor="@android:color/white"
            android:gravity="center" android:textSize="20sp" app:fontFamily="serif"/>
    <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content" android:id="@+id/themeSpinner" android:layout_marginBottom="20dp"
            android:background="@drawable/spinner_border" android:layout_marginTop="5dp"/>
    <Button
            android:text="@string/settings_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnLogout"
            android:background="@drawable/button_border" android:textColor="@android:color/white"
            android:layout_marginLeft="40dp" android:layout_marginRight="40dp"/>
</LinearLayout>