<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical" android:gravity="center"
        android:background="@android:color/black" android:id="@+id/bg_main">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:gravity="center" >
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/logo_main" android:textColor="@android:color/white"
                android:gravity="center" android:layout_marginBottom="40dp" android:textSize="50sp"
                app:fontFamily="cursive"/>
        <TextView
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:textSize="24sp"
                android:textColor="@android:color/white" android:layout_marginBottom="5dp" app:fontFamily="serif"
                android:gravity="center"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText" android:layout_marginBottom="10dp" android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" android:textSize="20sp" android:background="@drawable/button_border"
                android:paddingTop="5dp" android:paddingBottom="5dp" android:textColor="@android:color/white"
                android:gravity="center"/>
        <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:textSize="24sp"
                android:textColor="@android:color/white" android:layout_marginBottom="5dp" app:fontFamily="serif"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2" android:layout_marginBottom="10dp" android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" android:background="@drawable/button_border" android:paddingTop="5dp"
                android:paddingBottom="5dp" android:gravity="center" android:textSize="20sp"
                android:textColor="@android:color/white"/>
        <TextView
                android:text="@string/server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:textSize="24sp"
                android:textColor="@android:color/white" android:layout_marginBottom="5dp" app:fontFamily="serif"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:ems="10"
                android:id="@+id/editText3" android:layout_marginBottom="10dp" android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" android:background="@drawable/button_border" android:paddingTop="5dp"
                android:paddingBottom="5dp" android:gravity="center" android:textSize="20sp"
                android:textColor="@android:color/white"/>
        <Switch
                android:text="@string/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/remember" android:textColor="@android:color/white"
                android:layout_marginBottom="10dp" android:textSize="18sp"/>
        <TextView
                android:text="@string/incorrect_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/incorrect"
                android:textColor="@android:color/holo_red_dark" android:gravity="center"
                android:layout_marginBottom="40dp" android:textSize="18sp" app:fontFamily="serif"
                android:visibility="gone"/>

        <Button
                android:text="@string/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button" android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp" android:background="@drawable/button_border"
                android:textColor="@android:color/white" android:textSize="20sp" android:onClick="login"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>