<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical" android:gravity="center"
        android:background="@android:color/black" android:id="@+id/background_fm">

    <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/logo_fm" android:textColor="@android:color/white"
            android:gravity="center" android:textSize="50sp"
            app:fontFamily="cursive" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:id="@+id/rvFiles"
            app:layout_constraintTop_toBottomOf="@+id/txPath"
    >
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:id="@+id/optionBelt">
        <Button
                android:text="@string/folder"
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/btnNewFolder" android:layout_marginBottom="20dp"
                android:background="@drawable/button_circle" android:textSize="24sp"/>
        <Button
                android:text="@string/plus"
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/btnUpload" android:layout_marginBottom="20dp"
                android:background="@drawable/button_circle" android:textSize="30sp"/>
        <Button
                android:text="@string/settings_icon"
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/btnSettings" android:background="@drawable/button_circle"
                android:textSize="24sp"/>
    </LinearLayout>
    <TextView
            android:text="/"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txPath"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/white" app:layout_constraintTop_toBottomOf="@+id/logo_fm"/>
</android.support.constraint.ConstraintLayout>